+ Add playlist to meny

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -50,6 +50,7 @@
             <ul class="left">
                 {% if app.user %}
                 <li><a href="{{ path('dashboard') }}">Dashboard</a></li>
+                <li><a href="{{ path('playlist_index') }}">Playlist</a></li>
                 <li><a href="{{ path('podcast_index') }}">Podcast</a></li>
                 <li><a href="{{ path('episode_index') }}">Episodes</a></li>
                 <li><a href="{{ path('search_index') }}">Search</a></li>
