+ Removing podcast from playlist works

--- a/src/Dahlberg/PodrBundle/Resources/public/css/application.css
+++ b/src/Dahlberg/PodrBundle/Resources/public/css/application.css
@@ -56,6 +56,11 @@
     width: 100%;
 }
 
+.playlist-details .podcast-list {
+    list-style: none;
+    margin-left: 0;
+}
+
 /* Podcast
 -------------------------------------*/
 .podcast-table .podcast-title,
