+ Adding LessCSS support + Improving playlist:index

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,6 +11,7 @@
     {% stylesheets '@DahlbergPodrBundle/Resources/public/css/foundation.min.css'
                    '@DahlbergPodrBundle/Resources/public/css/foundation-icons.css'
                    '@DahlbergPodrBundle/Resources/public/css/application.css'
+                   '@DahlbergPodrBundle/Resources/public/css/app.less'
                    filter='cssrewrite' %}
     <link rel="stylesheet" href="{{ asset_url }}" />
     {% endstylesheets %}
