--- a/src/Dahlberg/PodrBundle/Resources/views/Playlist/index.html.twig
+++ b/src/Dahlberg/PodrBundle/Resources/views/Playlist/index.html.twig
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="large-1 columns"><i class="fi-{{ playlist.getIcon }} icon-{{ playlist.getStyle }}"></i></div>
                 <div class="large-11 columns">
-                    <p><h2><a href="{{ path('playlist_details', {'id': playlist.getId}) }}">{{ playlist.getTitle }}</a></h2></p>
+                    <h2><a href="{{ path('playlist_details', {'id': playlist.getId}) }}">{{ playlist.getTitle }}</a></h2>
                     <!--<ul class="inline-list">
                         <li><a href=""></a></li>
                     </ul>-->
