! Renaming save to add

--- a/src/Dahlberg/PodrBundle/Resources/views/Podcast/index.html.twig
+++ b/src/Dahlberg/PodrBundle/Resources/views/Podcast/index.html.twig
@@ -58,7 +58,7 @@
                 </div>
             {% endif %}
             <div>
-                {{ form_widget(form.save) }}
+                {{ form_widget(form.add) }}
                 <a href="{{ path('podcast_import') }}" class="button radius">Import</a>
             </div>
         {{ form_end(form) }}
