--- a/src/Dahlberg/PodrBundle/Resources/views/Podcast/details.html.twig
+++ b/src/Dahlberg/PodrBundle/Resources/views/Podcast/details.html.twig
@@ -90,11 +90,15 @@
                 {% for episode in podcast.getEpisodes %}
                     <tr>
                         <td><a href="{{ path('episode_details', {'id': episode.getId}) }}">{{ episode.getTitle }}</a></td>
-                        <td>{% if episode.getUserEpisode(user) is not null and episode.getUserEpisode(user).getUnread == true %}
+                        <td>
+                        {% if episode.getUserEpisode(user) is not null and episode.getUserEpisode(user).getUnread == true %}
                             Unread
                         {% elseif episode.getUserEpisode(user) is not null and episode.getUserEpisode(user).getArchived == false %}
                             Unarchived
-                        {% else %}-{% endif %}</td>
+                        {% elseif episode.getUserEpisode(user) is not null and episode.getUserEpisode(user).getArchived == true %}
+                            -
+                        {% else %}Unread{% endif %}
+                        </td>
                         <td>{% if episode.getPublishedDate %}{{ episode.getPublishedDate|date('Y-m-d') }}{% else %}-{% endif %}</td>
                     </tr>
                 {% endfor %}
