--- a/src/Dahlberg/PodrBundle/Resources/views/Search/index.html.twig
+++ b/src/Dahlberg/PodrBundle/Resources/views/Search/index.html.twig
@@ -96,7 +96,7 @@
                 </tbody>
             </table>
         {% else %}
-            <p>No episodes found.</p>
+            <p>No podcasts found.</p>
         {% endif %}
         {% endif %}
     </div>
